ลิ้งหน้าแรกไปหน้าอัพโหลด / กำลังทำโค้ด เลือกภาพจากคอมแล้วพรีวิวภาพ

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
 <!-- <app-main></app-main> -->
 <!-- <app-upload-pic></app-upload-pic> -->
-<app-forecast></app-forecast>
-<!-- <router-outlet></router-outlet> -->
+<!-- <app-forecast></app-forecast> -->
+<!-- <p>routing test</p>
+
+<a routerLink="">Home</a>
+<a routerLink="/upload-pic"> upload</a>
+<a routerLink="/forecast"> forecast</a> -->
+<router-outlet></router-outlet>
