--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -6,8 +6,10 @@
   </div>
   <div class="row">
     <div class="col-lg-12 col-md-12 col-sm-12 text-center outPopUp2">
-      <button type="button" class="btn btn-default button">Click for check your BMI</button>
+      <button type="button" class="btn btn-default button" [routerLink]="['/upload-pic']">Click for check your BMI</button>
     </div>
   </div>
 
 </div>
+
+<router-outlet></router-outlet>
