--- a/src/app/upload-pic/upload-pic.component.html
+++ b/src/app/upload-pic/upload-pic.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
   <div class="row">
     <div class="col-lg-12 col-md-12 col-sm-12 text-center outPopUp">
       <img src="assets/img/logo.jpg" style="width: 25%;">
@@ -9,5 +9,28 @@
       <button type="button" class="btn btn-default button btn-lg">Upload Picture</button>
     </div>
   </div>
+</div> -->
 
+<!-- ------ test Upload file ------ -->
+<!-- <p>File upload</p>  ------------------ 1
+<input type="file" (change)="onFileSelected($event)"> -->
+<div class="container">
+  <div class="row">
+    <div class="col s8 offset-2">
+      <div class="card-panel teal lighten-2">
+        <h4 class="center white-text">Image Library</h4>
+      </div>
+      <form #imageForm = ngForm>
+        <div class="row">
+          <div class="input-field col s12">
+            <input type="text" #Caption ngModel name="Caption" id="Caption">
+            <label for="Caption">Caption</label>
+          </div>
+          <img style="width:250px;height:200px">
+          <input type="file" #Image accept="image/*">
+          <button type="submit" class="btn-large btn-submit">Submit</button>
+        </div>
+      </form>
+    </div>
+  </div>
 </div>
