--- a/src/app/upload-pic/upload-pic.component.html
+++ b/src/app/upload-pic/upload-pic.component.html
@@ -16,21 +16,10 @@
 <input type="file" (change)="onFileSelected($event)"> -->
 <div class="container">
   <div class="row">
-    <div class="col s8 offset-2">
-      <div class="card-panel teal lighten-2">
-        <h4 class="center white-text">Image Library</h4>
-      </div>
-      <form #imageForm = ngForm>
-        <div class="row">
-          <div class="input-field col s12">
-            <input type="text" #Caption ngModel name="Caption" id="Caption">
-            <label for="Caption">Caption</label>
-          </div>
-          <img style="width:250px;height:200px">
-          <input type="file" #Image accept="image/*">
-          <button type="submit" class="btn-large btn-submit">Submit</button>
-        </div>
-      </form>
+    <div class="col s12 offset-2">
+      <img [src]="imageUrl" style="width:50%; height:50%">
+      <input type="file" #Image accept="image/*" (change)="handleFileInput($event.target.files)">
+      <br>
     </div>
   </div>
 </div>
