--- a/src/app/forecast/forecast.component.scss
+++ b/src/app/forecast/forecast.component.scss
@@ -14,6 +14,10 @@
   border-color: #32c5d2;
 }
 
+.selector-for-some-widget {
+  box-sizing: content-box;
+}
+
 .mar {
  margin-bottom: 1em;
 }
@@ -76,4 +80,56 @@
 
 .example-sidenav {
   padding: 20px;
+}
+
+// -------
+//Bootstrap 4 Vertical Tabs
+$padding-base: 50px;
+$color-body: #fff;
+$color-border: #ddd;
+$color-link: #0275d8;
+$border-radius: 1rem;
+
+.contentData {
+  margin-top : 6rem;
+  margin-right: 70rem;
+}
+.nav-tabs {
+	&--vertical {
+		border-bottom: none;
+		border-right: 1px solid $color-border;
+		display: flex; //*
+		flex-flow: column nowrap; //**
+	} //* ** คือการจัดแนวของ tabs
+	
+	&--left {
+    margin: $padding-base; //ระยะห่างของข้างบน พอไม่ใส่มันเลยลงมา
+    
+		.nav-item + .nav-item {
+			margin-top: 1rem; //ความห่างของแต่ละ tabs
+		}
+		
+		.nav-link {
+			transition: border-color .500s ease-in; //ความเร็วช้าการขึ้นขอบตอนกด
+			white-space: nowrap;
+			
+			&:hover {
+				background-color: lighten($color-border, 10%);
+				border-color: transparent;
+			}
+		}
+		
+		.nav-link.active {
+			border-bottom-color: $color-border;
+			border-right-color: $color-body;
+			border-bottom-left-radius: $border-radius;
+			border-top-right-radius: 0;
+			margin-right: -1px;
+			
+			&:hover {
+				background-color: $color-body;
+				border-color: $color-link $color-body $color-link $color-link;
+			}
+		}
+	}
 }
