--- a/src/app/upload-pic/upload-pic.component.html
+++ b/src/app/upload-pic/upload-pic.component.html
@@ -17,9 +17,14 @@
 <div class="container">
   <div class="row">
     <div class="col s12 offset-2">
-      <img [src]="imageUrl" style="width:50%; height:50%">
-      <input type="file" #Image accept="image/*" (change)="handleFileInput($event.target.files)">
       <br>
+      <img [src]="imageUrl" style="width:50%; height:50%">
+      <!-- <input type="file" #Image accept="image/*" (change)="handleFileInput($event.target.files)"> -->
+      <br>
+      <br>
+      <input type="file" #Image accept="image/*" style="display: none" (change)="handleFileInput($event.target.files)">
+      <button (click)="Image.click()">Select File</button>&nbsp;
+      <button type="button" [routerLink]="['/forecast']">Go to</button>
     </div>
   </div>
 </div>
