--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,15 +1,15 @@
-<div class="container">
+<div class="container-fluid">
   <div class="row">
-    <div class="col-lg-12 col-md-12 col-sm-12 text-center outPopUp">
+    <div class="col-lg-12 col-md-12 col-sm-12 text-center top">
       <h1>Body Mass Index Prediction Web Application From Face Images Using Deep Learning</h1>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-lg-12 col-md-12 col-sm-12 text-center outPopUp2">
-      <button type="button" class="btn btn-default button" [routerLink]="['/upload-pic']">Click for check your BMI</button>
+    <div class="col-lg-12 col-md-12 col-sm-12">
+      <!-- พื้นที่ว่าง -->
+    </div>
+    <div class="col-lg-12 col-md-12 col-sm-12 text-center top2">
+      <button type="button" class="btn btn-default button" [routerLink]="['/upload-pic']">Click for check your
+        BMI</button>
     </div>
   </div>
-
 </div>
-
 <router-outlet></router-outlet>
