--- a/src/app/upload-pic/upload-pic.component.html
+++ b/src/app/upload-pic/upload-pic.component.html
@@ -1,30 +1,14 @@
-<!-- <div class="container">
-  <div class="row">
-    <div class="col-lg-12 col-md-12 col-sm-12 text-center outPopUp">
-      <img src="assets/img/logo.jpg" style="width: 25%;">
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-lg-12 col-md-12 col-sm-12 text-center outPopUp2">
-      <button type="button" class="btn btn-default button btn-lg">Upload Picture</button>
-    </div>
-  </div>
-</div> -->
 
-<!-- ------ test Upload file ------ -->
-<!-- <p>File upload</p>  ------------------ 1
-<input type="file" (change)="onFileSelected($event)"> -->
-<div class="container">
+<div class="container-fluid">
   <div class="row">
-    <div class="col s12 offset-2">
-      <br>
-      <img [src]="imageUrl" style="width:50%; height:50%">
+    <div class="col-lg-12 col-md-12 col-sm-12 text-center top">
+      <img [src]="imageUrl" style=" width: 30rem; height: 40rem;">
       <!-- <input type="file" #Image accept="image/*" (change)="handleFileInput($event.target.files)"> -->
       <br>
       <br>
-      <input type="file" #Image accept="image/*" style="display: none" (change)="handleFileInput($event.target.files)">
-      <button (click)="Image.click()">Select File</button>&nbsp;
-      <button type="button" [routerLink]="['/forecast']">Go to</button>
+      <input type="file" #Image accept="image/*" style="display: none;" (change)="handleFileInput($event.target.files)">
+      <button class="btn btn-default button" (click)="Image.click()">Select File</button>&nbsp;
+      <button type="button" class="btn btn-default button" [routerLink]="['/forecast']">Go to</button>
     </div>
   </div>
 </div>
