ใส่ปุ่มแชร์จัดหน้าแล้ว- ปุ่มแชร์เหลือใส่ลิ้ง // ใส่แบล็คกราว

--- a/src/app/forecast/forecast.component.html
+++ b/src/app/forecast/forecast.component.html
@@ -1,6 +1,9 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-lg-7 col-md-7 col-sm-7 text-left">
+    <div class="col-md-1 col-sm-1 text-left top">
+
+    </div>
+    <div class="col-lg-7 col-md-7 col-sm-7 text-left top">
       <div class="d-flex flex-row mt-2">
         <ul class="nav nav-tabs nav-tabs--vertical nav-tabs--left" role="navigation">
           <li class="nav-item">
@@ -101,12 +104,30 @@
         </div>
       </div>
     </div>
-    <div class="col-lg-5 col-md-5 col-sm-5 text-center">
-      <img [src]="imageUrl" style=" width: 30rem; height: 30rem;">
+    <div class="col-lg-4 col-md-4 col-sm-4 text-center top">
+      <img [src]="imageUrl" style=" width: 20rem; height: 20rem;">
       <h1>Hello world</h1>
+      <!-- <img [src]="imageUrl" style=" width: 5rem; height: 5rem;">&nbsp;&nbsp;
       <img [src]="imageUrl" style=" width: 5rem; height: 5rem;">&nbsp;&nbsp;
-      <img [src]="imageUrl" style=" width: 5rem; height: 5rem;">&nbsp;&nbsp;
-      <img [src]="imageUrl" style=" width: 5rem; height: 5rem;">
+      <img [src]="imageUrl" style=" width: 5rem; height: 5rem;"> -->
+      <br>
+      <!-- Facebook -->
+      <a href="http://www.facebook.com/sharer.php?u=https://simplesharebuttons.com" target="_blank">
+        <img src="https://simplesharebuttons.com/images/somacro/facebook.png" alt="Facebook" />
+      </a>
+      <!-- Google+ -->
+      <a href="https://plus.google.com/share?url=https://simplesharebuttons.com" target="_blank">
+        <img src="https://simplesharebuttons.com/images/somacro/google.png" alt="Google" />
+      </a>
+      <!-- Twitter -->
+      <a href="https://twitter.com/share?url=https://simplesharebuttons.com&amp;text=Simple%20Share%20Buttons&amp;hashtags=simplesharebuttons"
+        target="_blank">
+        <img src="https://simplesharebuttons.com/images/somacro/twitter.png" alt="Twitter" />
+      </a>
+      <!-- Print -->
+      <a href="javascript:;" onclick="window.print()">
+        <img src="https://simplesharebuttons.com/images/somacro/print.png" alt="Print" />
+      </a>
     </div>
   </div>
 </div>
