--- a/src/app/forecast/forecast.component.html
+++ b/src/app/forecast/forecast.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid bg">
   <div class="row">
     <div class="col-md-1 col-sm-1 text-left top">
 
