--- a/src/app/upload-pic/upload-pic.component.html
+++ b/src/app/upload-pic/upload-pic.component.html
@@ -1,8 +1,7 @@
-
-<div class="container-fluid">
+<div class="container-fluid bg">
   <div class="row">
     <div class="col-lg-12 col-md-12 col-sm-12 text-center top">
-      <img [src]="imageUrl" style=" width: 30rem; height: 40rem;">
+      <img [src]="imageUrl" style=" width: 40rem; height: 40rem;">
       <!-- <input type="file" #Image accept="image/*" (change)="handleFileInput($event.target.files)"> -->
       <br>
       <br>
