--- a/src/app/upload-pic/upload-pic.component.scss
+++ b/src/app/upload-pic/upload-pic.component.scss
@@ -60,9 +60,26 @@
 }
 
 .top {
-  margin-top: 10rem;
+  margin-top: 20rem;
 }
 
 .top2 {
   margin-top: 2rem;
+}
+
+.bg {
+   /* The image used */
+   background-image: url('../img/web-desing.jpg');
+
+   /* Full height */
+   height: 100%; 
+ 
+   /* Center and scale the image nicely */
+   background-position: center;
+   background-repeat: no-repeat;
+   background-size: cover;
+   top: 0;
+   bottom: 0;
+   height: 100vh;
+   z-index: -10;
 }
