--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,7 @@
 body { 
     font-family: Roboto, Arial, sans-serif;
     margin: 0;
+    background-image: url('./app/img/bgMain.jpg');
   }
   
   .basic-container {
