--- a/src/app/forecast/forecast.component.html
+++ b/src/app/forecast/forecast.component.html
@@ -7,17 +7,15 @@
       <div class="d-flex flex-row mt-2">
         <ul class="nav nav-tabs nav-tabs--vertical nav-tabs--left" role="navigation">
           <li class="nav-item">
-            <a href="#lorem" class="nav-link active" data-toggle="tab" role="tab" aria-controls="lorem">Lorem</a>
+            <a href="#lorem" class="nav-link active" data-toggle="tab" role="tab" aria-controls="lorem">ผลการทำนาย BMI</a>
           </li>
           <li class="nav-item">
-            <a href="#ipsum" class="nav-link" data-toggle="tab" role="tab" aria-controls="ipsum">Ipsum</a>
+            <a href="#ipsum" class="nav-link" data-toggle="tab" role="tab" aria-controls="ipsum">คำแนะนำการออกกำลังกาย</a>
           </li>
           <li class="nav-item">
-            <a href="#dolor" class="nav-link" data-toggle="tab" role="tab" aria-controls="dolor">Dolor</a>
+            <a href="#dolor" class="nav-link" data-toggle="tab" role="tab" aria-controls="dolor">คำแนะนำการรับประทานอาหาร</a>
           </li>
-          <li class="nav-item">
-            <a href="#sit-amet" class="nav-link" data-toggle="tab" role="tab" aria-controls="sit-amet">Sit Amet</a>
-          </li>
+          
         </ul>
         <div class="tab-content">
           <div class="tab-pane fade show contentData active" id="lorem" role="tabpanel">
@@ -85,22 +83,7 @@
               amet
               nisi eu, rutrum fermentum odio.</p>
           </div>
-          <div class="tab-pane fade contentData" id="sit-amet" role="tabpanel">
-            <h1>Sit Amet</h1>
-
-            <p>Aliquam hendrerit nunc vitae nisi efficitur, eu porta sem aliquam. Aenean tincidunt mi sed mi sodales
-              bibendum.
-              Proin dolor ipsum, mollis venenatis velit eu, iaculis laoreet mi. Mauris eget egestas felis, sit amet
-              finibus
-              nunc. Aliquam non dui sit amet erat auctor mollis ac eget ante. Quisque at quam augue. Nulla dignissim,
-              augue
-              nec cursus consequat, mi nulla efficitur augue, vel fringilla turpis quam eu nunc. Quisque rutrum
-              vehicula
-              lacus
-              sodales molestie. Mauris vel felis sit amet erat maximus cursus ut a velit. In hac habitasse platea
-              dictumst.
-              Vestibulum vel neque sit amet nisl finibus fermentum.</p>
-          </div>
+          
         </div>
       </div>
     </div>
