--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,14 +1,19 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-lg-12 col-md-12 col-sm-12 text-center top">
-      <h1>Body Mass Index Prediction Web Application From Face Images Using Deep Learning</h1>
+    <div class="col-lg-12 col-md-12 col-sm-12 text-center top font-fam">
+      <img src="assets/img2/drumbell.png" style="width: 150px;">
+      <p>Body Mass Index Prediction Web Application </p>
+      <p>From Face Images Using Deep Learning</p>
     </div>
     <div class="col-lg-12 col-md-12 col-sm-12">
       <!-- พื้นที่ว่าง -->
     </div>
-    <div class="col-lg-12 col-md-12 col-sm-12 text-center top2">
-      <button type="button" class="btn btn-default button" [routerLink]="['/upload-pic']">Click for check your
-        BMI</button>
+
+    <div class="col-lg-12 col-md-12 col-sm-12 text-center top2 font-fam">
+      <img src="assets/img2/arrow.png" style="width: 150px;"  [routerLink]="['/upload-pic']">
+      <!-- <p>&#9947;</p> -->
+      <!-- <button type="button" class="btn btn-default button" [routerLink]="['/upload-pic']">Click for check your
+        BMI</button> -->
     </div>
   </div>
 </div>
