--- a/src/app/upload-pic/upload-pic.component.scss
+++ b/src/app/upload-pic/upload-pic.component.scss
@@ -69,7 +69,7 @@
 
 .bg {
    /* The image used */
-   background-image: url('../img/web-desing.jpg');
+   background-image: url('../img/web-desing-2.jpg');
 
    /* Full height */
    height: 100%; 
