--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,51 @@
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12">
+            <br>
+            <br>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-6">
 
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-6 font-fam2">
+            <!-- Nav pills -->
+            <ul class="nav nav-pills">
+                <li class="nav-item">
+                    <a class="active" data-toggle="pill" href="#home">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a  data-toggle="pill" href="#menu1">Menu 1</a>
+                </li>
+                <li class="nav-item">
+                    <a data-toggle="pill" href="#menu2">Menu 2</a>
+                </li>
+            </ul>
+
+            <!-- Tab panes -->
+            <div class="tab-content">
+                <div class="tab-pane container active" id="home">1</div>
+                <div class="tab-pane container fade" id="menu1">2.</div>
+                <div class="tab-pane container fade" id="menu2">3..</div>
+            </div>
+            
+            <!-- <div class="col-lg-2 col-md-2 col-sm-2 font-fam">
+                <p class="text-center">Home</p>
+        </div>
+        <div class="col-lg-1 col-md-1 col-sm-1 font-fam2">
+            <p class="text-center">Home</p>
+        </div>
+        <div class="col-lg-2 col-md-2 col-sm-2 font-fam">
+            <p class="text-center">What is BMI?</p>
+        </div>
+
+        <div class="col-lg-3 col-md-3 col-sm-3 font-fam">
+            <p class="text-center">Web about healthy</p>
+        </div>
+
+        <div class="col-lg-2 col-md-2 col-sm-2 font-fam">
+            <p class="text-center">Contact Us</p>
+        </div> -->
+        </div>
+    </div>
+</div>
 <router-outlet></router-outlet>
