--- a/src/app/forecast/forecast.component.scss
+++ b/src/app/forecast/forecast.component.scss
@@ -56,7 +56,7 @@ $border-radius: 1rem;
 
 .bg {
 	/* The image used */
-	background-image: url('../img/web-desing.jpg');
+	background-image: url('../img/web-desing-2.jpg');
 
 	/* Full height */
 	height: 100%; 
