--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -1,3 +1,9 @@
+.font-fam {
+  font-family: TH SarabunPSK;
+  font-size: 70px;
+  font-weight: bold;
+  color: white;
+}
 
 .button {
     // border-radius: 12px;
@@ -16,11 +22,11 @@
   }
   
   .top {
-    margin-top: 35rem;
+    margin-top: 15rem;
   }
 
   .top2 {
-    margin-top: 2rem;
+    margin-top: 15rem;
   }
 
   .form-control {
