--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,9 +4,9 @@
 @import 'ag-grid-community/dist/styles/ag-theme-balham.css';
 
 body { 
-    font-family: Roboto, Arial, sans-serif;
+    font-family: TH SarabunPSK, Arial, sans-serif;
     margin: 0;
-    background-image: url('./app/img/bgMain.jpg');
+    background-image: url('./app/img/web-desing-2.jpg');
   }
   
   .basic-container {
