--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,10 @@ body {
     font-family: TH SarabunPSK, Arial, sans-serif;
     margin: 0;
     background-image: url('./app/img/web-desing-2.jpg');
+    background-repeat: repeat-x;
+    background-size: 100% 100%;
+    background-attachment: fixed;
+    padding: 20px 0px 0px 20px;
   }
   
   .basic-container {
