หน้า main เสร็จแล้ว

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,47 +4,28 @@
             <br>
             <br>
         </div>
-        <div class="col-lg-6 col-md-6 col-sm-6">
+        <div class="col-lg-8 col-md-8 col-sm-6">
 
         </div>
-        <div class="col-lg-6 col-md-6 col-sm-6 font-fam2">
-            <!-- Nav pills -->
-            <ul class="nav nav-pills">
+        <div class="col-lg-4 col-md-4 col-sm-4">
+            <!-- new -->
+            <ul class="nav justify-content-center">
                 <li class="nav-item">
-                    <a class="active" data-toggle="pill" href="#home">Home</a>
+                    <a class="nav-link font-fam2" data-toggle="tab" href="#home">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a  data-toggle="pill" href="#menu1">Menu 1</a>
+                    <a class="nav-link font-fam2" data-toggle="tab" href="#bmi-is">What is BMI?</a>
                 </li>
+
                 <li class="nav-item">
-                    <a data-toggle="pill" href="#menu2">Menu 2</a>
+                    <a class="nav-link font-fam2" data-toggle="tab" href="#about-healthy">Web about healthy</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link font-fam2" data-toggle="tab" href="#contact">Contact Us</a>
                 </li>
             </ul>
 
-            <!-- Tab panes -->
-            <div class="tab-content">
-                <div class="tab-pane container active" id="home">1</div>
-                <div class="tab-pane container fade" id="menu1">2.</div>
-                <div class="tab-pane container fade" id="menu2">3..</div>
-            </div>
-            
-            <!-- <div class="col-lg-2 col-md-2 col-sm-2 font-fam">
-                <p class="text-center">Home</p>
-        </div>
-        <div class="col-lg-1 col-md-1 col-sm-1 font-fam2">
-            <p class="text-center">Home</p>
-        </div>
-        <div class="col-lg-2 col-md-2 col-sm-2 font-fam">
-            <p class="text-center">What is BMI?</p>
-        </div>
-
-        <div class="col-lg-3 col-md-3 col-sm-3 font-fam">
-            <p class="text-center">Web about healthy</p>
-        </div>
-
-        <div class="col-lg-2 col-md-2 col-sm-2 font-fam">
-            <p class="text-center">Contact Us</p>
-        </div> -->
         </div>
     </div>
 </div>
