--- a/src/app/upload-pic/upload-pic.component.scss
+++ b/src/app/upload-pic/upload-pic.component.scss
@@ -60,7 +60,7 @@
 }
 
 .top {
-  margin-top: 20rem;
+  margin-top: 15rem;
 }
 
 .top2 {
@@ -69,7 +69,7 @@
 
 .bg {
    /* The image used */
-   background-image: url('../img/web-desing-2.jpg');
+  //  background-image: url('../img/web-desing-2.jpg');
 
    /* Full height */
    height: 100%; 
