--- a/src/app/forecast/forecast.component.scss
+++ b/src/app/forecast/forecast.component.scss
@@ -1,5 +1,23 @@
+.font-fam {
+  font-family: TH SarabunPSK;
+  font-size: 25px;
+  font-weight: bold;
+  color: white;
+}
+
+.font-fam2 {
+  font-family: TH SarabunPSK;
+  font-size: 30px;
+  font-weight: bolder;
+  color: white;
+}
+
 .top {
-  margin-top: 20rem;
+  margin-top: 5rem;
+}
+
+.imgBorder {
+  border: 5px solid white;
 }
 
 // -------
@@ -52,21 +70,4 @@ $border-radius: 1rem;
 			}
 		}
   }
-}
-
-.bg {
-	/* The image used */
-	// background-image: url('../img/web-desing-2.jpg');
-
-	/* Full height */
-	height: 100%; 
-
-	/* Center and scale the image nicely */
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	top: 0;
-	bottom: 0;
-	height: 100vh;
-	z-index: -10;
 }
