--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,18 +11,18 @@
             <!-- new -->
             <ul class="nav justify-content-center">
                 <li class="nav-item">
-                    <a class="nav-link font-fam2" data-toggle="tab" href="#home">Home</a>
+                    <a class="nav-link font-fam2" data-toggle="tab" href="#home" [routerLink]="['/']"> Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link font-fam2" data-toggle="tab" href="#bmi-is">What is BMI?</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link font-fam2" data-toggle="tab" href="#about-healthy">Web about healthy</a>
+                    <a class="nav-link font-fam2" data-toggle="tab" href="#bmi-is" [routerLink]="['/what-bmi']">What is BMI?</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link font-fam2" data-toggle="tab" href="#contact">Contact Us</a>
+                    <a class="nav-link font-fam2" data-toggle="tab" href="#about-healthy" [routerLink]="['/healthy']">Web about healthy</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link font-fam2" data-toggle="tab" href="#contact" [routerLink]="['/contact']">Contact Us</a>
                 </li>
             </ul>
 
