share data โดยผ่านตัวกลางอย่าง data service.ts

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,7 +1,7 @@
-<p class="font-fam text-center "  style="color:brown;">
+<h1 class="font-fam text-center "  style="color:brown;">
   result // Parent
-</p>
+</h1>
 <hr>
 <br>
 
-
+<h1 class="text-center">Message: {{message}}</h1>
