--- a/src/app/healthy/healthy.component.html
+++ b/src/app/healthy/healthy.component.html
@@ -1,3 +1,5 @@
-<p>
-  healthy works!
-</p>
+<h1 class="font-fam text-center "  style="color:brown;">Sibling</h1>
+<hr>
+<br>
+
+<h1 class="text-center">{{message}}</h1>
