--- a/src/app/upload-pic/upload-pic.component.html
+++ b/src/app/upload-pic/upload-pic.component.html
@@ -9,11 +9,11 @@
       <br>
       <br><br>
       <input type="file" #Image accept="image/*" style="display: none;" (change)="handleFileInput($event.target.files)">
-      <button class="btn btn-default btn-lg" (click)="Image.click()">Select File</button>&nbsp;&nbsp;&nbsp;&nbsp;
-      <button type="button" class="btn btn-default btn-lg" [routerLink]="['/forecast']">Go to</button>
+      <button class="btn btn-default btn-lg" (click)="Image.click();">Select File</button>&nbsp;&nbsp;&nbsp;&nbsp;
+      <button type="button" class="btn btn-default btn-lg" (click)="onUpload()" [routerLink]="['/forecast']">Go to</button>
 
     </div>
-    <div class="col-lg-8 col-md-8 col-sm-8 font-fam2 text-break">
+    <!-- <div class="col-lg-8 col-md-8 col-sm-8 font-fam2 text-break">
       <p style="text-decoration: underline; margin-top: 80px;">ข้อแนะนำ</p>
       <p style="text-indent: 50px; font-size: 40px; ">ควรใช้รูปที่มีใบหน้าตรง ไม่มีสิ่งบดบังใบหน้า
         เพื่อเพิ่มประสิทธิภาพในการพยากรณ์ค่า BMI</p>
@@ -22,8 +22,8 @@
       <div class="text-center">
         <img src="assets/img2/do not use.png" style="width: 900px;">
       </div>
+    </div> -->
 
-
-    </div>
+    
   </div>
 </div>
