--- a/src/app/forecast/forecast.component.html
+++ b/src/app/forecast/forecast.component.html
@@ -1,5 +1,8 @@
 <div class="container-fluid">
   <div class="row">
+    <div class="col-lg-12">
+      <h1 class="text-center">{{message}}</h1>
+    </div>
     <div class="col-lg-8 col-md-8 col-sm-8 text-center top">
       <div class="d-flex flex-row mt-2">
         <div class="font-fam">
@@ -92,27 +95,29 @@
     <div class="col-lg-4 col-md-4 col-sm-4 text-center top">
       <img [src]="imageUrl" class="imgBorder" style="width: 35rem; height: 35rem; margin-top: 8rem;">
       <h1 style="font-size: 60px; font-weight: bolder; color: white;">Hello world</h1>
-      <!-- <img [src]="imageUrl" style=" width: 5rem; height: 5rem;">&nbsp;&nbsp;
-      <img [src]="imageUrl" style=" width: 5rem; height: 5rem;">&nbsp;&nbsp;
-      <img [src]="imageUrl" style=" width: 5rem; height: 5rem;"> -->
+      
       <br>
-      <!-- Facebook -->
-      <a href="http://www.facebook.com/sharer.php?u=https://simplesharebuttons.com" target="_blank">
-        <img src="https://simplesharebuttons.com/images/somacro/facebook.png" alt="Facebook" />
-      </a>
-      <!-- Google+ -->
-      <a href="https://plus.google.com/share?url=https://simplesharebuttons.com" target="_blank">
-        <img src="https://simplesharebuttons.com/images/somacro/google.png" alt="Google" />
-      </a>
-      <!-- Twitter -->
-      <a href="https://twitter.com/share?url=https://simplesharebuttons.com&amp;text=Simple%20Share%20Buttons&amp;hashtags=simplesharebuttons"
-        target="_blank">
-        <img src="https://simplesharebuttons.com/images/somacro/twitter.png" alt="Twitter" />
-      </a>
-      <!-- Print -->
-      <a href="javascript:;" onclick="window.print()">
-        <img src="https://simplesharebuttons.com/images/somacro/print.png" alt="Print" />
-      </a>
+      <!-- div share -->
+      <div>
+        <!-- Facebook -->
+        <a href="http://www.facebook.com/sharer.php?u=https://simplesharebuttons.com" target="_blank">
+          <img src="https://simplesharebuttons.com/images/somacro/facebook.png" alt="Facebook" />
+        </a>
+        <!-- Google+ -->
+        <a href="https://plus.google.com/share?url=https://simplesharebuttons.com" target="_blank">
+          <img src="https://simplesharebuttons.com/images/somacro/google.png" alt="Google" />
+        </a>
+        <!-- Twitter -->
+        <a href="https://twitter.com/share?url=https://simplesharebuttons.com&amp;text=Simple%20Share%20Buttons&amp;hashtags=simplesharebuttons"
+          target="_blank">
+          <img src="https://simplesharebuttons.com/images/somacro/twitter.png" alt="Twitter" />
+        </a>
+        <!-- Print -->
+        <a href="javascript:;" onclick="window.print()">
+          <img src="https://simplesharebuttons.com/images/somacro/print.png" alt="Print" />
+        </a>
+      </div>
+      <!-- end div share -->
     </div>
   </div>
 </div>
