--- a/src/app/upload-pic/upload-pic.component.html
+++ b/src/app/upload-pic/upload-pic.component.html
@@ -1,5 +1,30 @@
 <div class="container-fluid">
   <div class="row">
+    <!-- start -->
+    <div class="col-lg-12">
+      <h1 class="text-center">test
+          <button
+          *ngIf="!buttonDisabled"
+          (click)="buttonDisabled = true">
+          Disable Button
+          </button>
+           
+          <!-- สร้างสองปุ่มไว้ -->
+           
+          <!-- the target button -->
+          <button
+          [disabled]="buttonDisabled"
+          (click)="count = count + 1">
+          I've been clicked {{count}} times.
+          </button>
+        
+      </h1>
+      
+
+      <hr>
+    </div>
+    <!-- end -->
+
     <div class="col-lg-1">
 
     </div>
@@ -10,7 +35,8 @@
       <br><br>
       <input type="file" #Image accept="image/*" style="display: none;" (change)="handleFileInput($event.target.files)">
       <button class="btn btn-default btn-lg" (click)="Image.click();">Select File</button>&nbsp;&nbsp;&nbsp;&nbsp;
-      <button type="button" class="btn btn-default btn-lg" (click)="newMessage()" [routerLink]="['/forecast']">Go to</button>
+      <button type="button" class="btn btn-default btn-lg" (click)="newMessage()" disabled="true"
+        [routerLink]="['/forecast']">Go to</button>
 
     </div>
     <div class="col-lg-8 col-md-8 col-sm-8 font-fam2 text-break">
