--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,28 +1,30 @@
-<div class="container-fluid">
+<div class="container-fluid position">
     <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12">
             <br>
             <br>
         </div>
-        <div class="col-lg-8 col-md-8 col-sm-6">
+        <div class="col-lg-8">
 
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-4">
-            <!-- new -->
+        <div class="col-lg-4 col-md-12 col-sm-12">
             <ul class="nav justify-content-center">
                 <li class="nav-item">
                     <a class="nav-link font-fam2" data-toggle="tab" href="#home" [routerLink]="['/']"> Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link font-fam2" data-toggle="tab" href="#bmi-is" [routerLink]="['/what-bmi']">What is BMI?</a>
+                    <a class="nav-link font-fam2" data-toggle="tab" href="#bmi-is" [routerLink]="['/what-bmi']">What is
+                        BMI?</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link font-fam2" data-toggle="tab" href="#about-healthy" [routerLink]="['/healthy']">Web about healthy</a>
+                    <a class="nav-link font-fam2" data-toggle="tab" href="#about-healthy"
+                        [routerLink]="['/healthy']">Web about healthy</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link font-fam2" data-toggle="tab" href="#contact" [routerLink]="['/contact']">Contact Us</a>
+                    <a class="nav-link font-fam2" data-toggle="tab" href="#contact" [routerLink]="['/contact']">Contact
+                        Us</a>
                 </li>
             </ul>
 
