--- a/src/app/upload-pic/upload-pic.component.html
+++ b/src/app/upload-pic/upload-pic.component.html
@@ -7,7 +7,7 @@
 
     </div>
     <div class="col-lg-3 col-md-3 col-sm-3 text-center top">
-      <img [src]="imageUrl" class="imgBorder" style=" width: 35rem; height: 45rem;">
+      <img [src]="imageUrl" class="imgBorder" style=" width: 35rem; height: 45rem;" alt="select image">
       <br><br><br>
       <!-- start btn -->
       <input type="file" #Image accept=".png, .jpg, .jpeg" style="display: none;"
