--- a/src/app/what-bmi/what-bmi.component.html
+++ b/src/app/what-bmi/what-bmi.component.html
@@ -1,10 +1,15 @@
-<p class="font-fam text-center"  style="color:brown;">
-  upload Pic // Child
-  
-</p>
-<hr>
-<br>
-<div class="notification is-primary font-fam text-center">
-  <p>Child</p>
-  Message: {{message}}
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-lg-11 col-md-11 col-sm-11 text-center br-enter">
+      <div class="jumbotron">
+        <img class="card-img-top" src="../../assets/img2/bmi.png" alt="Exercise Picture" style="height: 50rem;width: 80rem;"  />
+        <h1 class="display-4">BMI คืออะไร ?!</h1>
+        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to
+          featured content or information.</p>
+        <hr class="my-4">
+        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+      </div>
+    </div>
+  </div>
 </div>
+
