--- a/src/app/what-bmi/what-bmi.component.scss
+++ b/src/app/what-bmi/what-bmi.component.scss
@@ -11,3 +11,14 @@
     font-weight: bolder;
     color: white;
   }
+
+  .br-enter{
+    margin-top: 5rem;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .margin-auto {
+    margin-left: auto;
+    margin-right: auto;
+  }
