--- a/src/app/healthy/healthy.component.html
+++ b/src/app/healthy/healthy.component.html
@@ -1,5 +1,20 @@
-<h1 class="font-fam text-center "  style="color:brown;">Sibling</h1>
-<hr>
-<br>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-lg-11 col-md-11 col-sm-11 text-center br-enter font-fam" style="margin-top: 5rem;">
+            <div class="jumbotron">
+                <!-- start -->
+                https://www.youtube.com/channel/UCukqpmtAdkWRLagQwJdbyhw,
+                https://www.youtube.com/user/TheFitnessMarshall,
+                https://www.youtube.com/watch?v=HW7lqDLwG_Y,
+                
+                <!-- end -->
 
-<h1 class="text-center">{{message}}</h1>
+                <hr>
+                <p>Copyright © 2019 Rajamangala University of Technology Tawan-Ok : Chakrabongse Bhuvanarth Campus -
+                    Information
+                    Technology </p>
+
+            </div>
+        </div>
+    </div>
+</div>
