--- a/src/app/what-bmi/what-bmi.component.scss
+++ b/src/app/what-bmi/what-bmi.component.scss
@@ -1,8 +1,7 @@
 .font-fam {
     font-family: TH SarabunPSK;
-    font-size: 50px;
-    font-weight: bold;
-    color: white;
+    font-size: 30px;
+    text-align: left;
   }
   
   .font-fam2 {
@@ -13,7 +12,6 @@
   }
 
   .br-enter{
-    margin-top: 5rem;
     margin-left: auto;
     margin-right: auto;
   }
@@ -22,3 +20,10 @@
     margin-left: auto;
     margin-right: auto;
   }
+
+  .indent {
+    text-indent: 100px;
+  }
+
+
+  
