--- a/src/app/healthy/healthy.component.scss
+++ b/src/app/healthy/healthy.component.scss
@@ -1,29 +1,324 @@
-.font-fam {
-    font-family: TH SarabunPSK;
-    font-size: 30px;
-    text-align: left;
-  }
-  
-  .font-fam2 {
-    font-family: TH SarabunPSK;
-    font-size: 30px;
-    font-weight: bolder;
-    color: white;
-  }
+.set-margin {
+  margin-left: auto;
+  margin-right: auto;
+}
 
-  .br-enter{
-    margin-left: auto;
-    margin-right: auto;
-  }
+.card .font-fam {
+  font-family: TH SarabunPSK;
+  font-size: 33px;
+  text-align: center;
+  font-weight: bolder;
+  color: white;
+  margin-top:-60px;
+}
 
-  .margin-auto {
-    margin-left: auto;
-    margin-right: auto;
-  }
+.card .font-fam2 {
+  font-family: TH SarabunPSK;
+  font-size: 23px;
+  color: white;
+}
 
-  .indent {
-    text-indent: 100px;
-  }
+.card .font-fam3 {
+  font-family: TH SarabunPSK;
+  font-size: 30px;
+  font-weight: bolder;
+}
+
+.card .font-fam4 {
+  font-family: TH SarabunPSK;
+  font-size: 20px;
+  color: white;
+}
+
+.card .img-font {
+  width:255px;
+  margin-top: 10px;
+}
+
+.card .img-font2 {
+  width:280px;
+  margin-top: 10px;
+}
 
 
-  
+.card .margin-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.card .indent {
+  text-indent: 100px;
+}
+
+.card .logo {
+  border-radius: 50%;
+  width: 100px;
+  margin-top: -55px; //40
+}
+
+.card .social-icon {
+  width: 70px;
+  margin-left: 20px;
+  margin-top: -15px;
+}
+
+.card .social-link {
+  margin-left: 30px;
+}
+
+
+//slide card
+/*Indicators*/ 
+.carousel-indicators li {
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+  margin: 0px 15px -400px 0px;
+  text-indent: 0;
+  cursor: pointer;
+  border: none;
+  border-radius: 50%;
+  background-color: #868686;
+  box-shadow: inset 1px 1px 1px 1px rgba(0,0,0,0.5);    
+}
+.carousel-indicators .active {
+  width: 18px;
+  height: 18px;
+  margin: 0px 15px -400px 0px;
+  background-color: #00ffdd;
+}
+
+/*Left and right controls*/
+.carousel-control-prev-icon {
+  // background-image: url('../../assets/img2/social/fb.png');
+  width: 50px;
+  height: 50px;
+  // margin-right: 180px;
+}
+.carousel-control-next-icon {
+  //background-image: url('../../assets/img2/social/fb.png');
+  width: 50px;
+  height: 50px;
+  // margin-left: 180px;
+
+}
+
+.carousel-control-prev {
+  width: 50px;
+  height: 50px;  
+  margin-top: 200px;
+}
+
+.carousel-control-next {
+  width: 50px;
+  height: 50px;  
+  margin-top: 200px;
+}
+
+
+//flip card css
+body {
+background-color: #2c3e50;
+}
+.main-container {
+padding: 100px 0px;
+}
+
+/* card container */
+.card-container {
+-webkit-perspective: 800px;
+-moz-perspective: 800px;
+-o-perspective: 800px;
+perspective: 800px;
+margin-bottom: 30px;
+}
+/* flip the pane when hovered */
+
+.card-container:hover .card,
+.card-container.hover.manual-flip .card {
+-webkit-transform: rotateY( 180deg);
+-moz-transform: rotateY( 180deg);
+-o-transform: rotateY( 180deg);
+transform: rotateY( 180deg);
+}
+
+.card-container.static:hover .card,
+.card-container.static.hover .card {
+-webkit-transform: none;
+-moz-transform: none;
+-o-transform: none;
+transform: none;
+}
+
+.card { /*หมุนการ์ด*/
+-webkit-transition: -webkit-transform .5s;
+-moz-transition: -moz-transform .5s;
+-o-transition: -o-transform .5s;
+transition: transform .5s;
+-webkit-transform-style: preserve-3d;
+-moz-transform-style: preserve-3d;
+-o-transform-style: preserve-3d;
+transform-style: preserve-3d;
+position: relative;
+}
+/* hide back of pane during flip */
+
+.front,
+.back {
+-webkit-backface-visibility: hidden;
+-moz-backface-visibility: hidden;
+-o-backface-visibility: hidden;
+backface-visibility: hidden;
+position: absolute;
+top: 0;
+left: 0;
+background-color: #FFF;
+box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.14);
+}
+/* front pane, placed above back */
+
+.front {
+z-index: 2;
+}
+
+.back {
+-webkit-transform: rotateY( 180deg);
+-moz-transform: rotateY( 180deg);
+-o-transform: rotateY( 180deg);
+transform: rotateY( 180deg);
+z-index: 3;
+}
+
+/*       your card style       */
+.card {
+background: none repeat scroll 0 0 #FFFFFF;
+border-radius: 4px;
+color: #444444;
+}
+
+.card-container,
+.front,
+.back {
+width: 100%;
+height: 420px;
+border-radius: 4px;
+}
+
+.card .bg{
+background-color: #444444;
+}
+
+.card .cover {
+height: 105px;
+overflow: hidden;
+border-radius: 4px 4px 0 0;
+}
+
+.card .cover img {
+width: 100%;
+}
+
+.card .user {
+border-radius: 50%;
+display: block;
+height: 120px;
+margin: -55px auto 0;
+overflow: hidden;
+width: 120px;
+}
+
+.card .user img {
+background: none repeat scroll 0 0 #FFFFFF;
+border: 4px solid #FFFFFF;
+width: 100%;
+}
+
+.card .content {
+background-color: rgba(0, 0, 0, 0);
+box-shadow: none;
+padding: 16px 20px 20px;
+}
+
+.text-center {
+text-align: center;
+}
+
+.card .content .main {
+min-height: 160px;
+
+}
+
+.card .back .content .main {
+height: 215px;
+}
+
+.card .name {
+font-size: 30px;
+line-height: 28px;
+margin: 10px 0 0;
+text-align: center;
+text-transform: capitalize;
+}
+
+.card h5 {
+margin: 5px 0;
+font-weight: 400;
+line-height: 20px;
+}
+
+.card .profession {
+color: #999999;
+text-align: center;
+margin-bottom: 20px;
+}
+
+.card .footer {
+border-top: 1px solid #EEEEEE;
+color: #999999;
+margin: 30px 0 0;
+padding: 10px 0 0;
+text-align: center;
+}
+
+.card .footer .social-links {
+font-size: 18px;
+}
+
+.card .footer .social-links a {
+margin: 0 7px;
+}
+
+.card .footer .btn-simple {
+margin-top: -6px;
+}
+
+.card .header {
+padding: 15px 20px;
+height: 90px;
+}
+
+.card .motto {
+border-bottom: 1px solid #EEEEEE;
+font-size: 32px;
+font-weight: 400;
+padding-bottom: 10px;
+text-align: center;
+}
+/*      card content style        */
+
+.title {
+color: #506A85;
+text-align: center;
+font-weight: 300;
+font-size: 44px;
+margin-bottom: 90px;
+line-height: 90%;
+}
+
+.title small {
+font-size: 17px;
+color: #999;
+text-transform: uppercase;
+margin: 0;
+}
+
