--- a/src/app/upload-pic/upload-pic.component.html
+++ b/src/app/upload-pic/upload-pic.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <!-- test -->
-   
+
     <!-- end -->
     <div class="col-lg-1">
 
@@ -27,9 +27,8 @@
         <img src="assets/img2/do not use.png" style="width: 900px;">
       </div>
     </div>
-
-    <div class="col-lg-8 col-md-8 col-sm-8 font-fam2 text-break">
-
+    <div class="col-lg-8 col-md-8 col-sm-8 font-fam2 text-center">
+      
     </div>
   </div>
 </div>
